--- a/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_30_2020/Reports/dashboard.html
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_09_30_2020/Reports/dashboard.html
@@ -51,7 +51,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">9/29/2020 11:57:51 PM</span>
+                    <span class="badge badge-primary">9/30/2020 1:36:55 PM</span>
                 </a>
             </li>
         </ul>
@@ -200,7 +200,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">Start</p>
-													<h6 class="font-weight-light">9/29/2020 11:57:51 PM</h6>
+													<h6 class="font-weight-light">9/30/2020 1:36:55 PM</h6>
 													<span class="text-semibold text-success font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -216,7 +216,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">End</p>
-													<h6 class="font-weight-light">9/29/2020 11:58:31 PM</h6>
+													<h6 class="font-weight-light">9/30/2020 1:37:53 PM</h6>
 													<span class="text-semibold text-danger font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -308,7 +308,7 @@
 			};
 		</script>
 			<script>
-				var timeline = { "Creation, updation and deletion of Employer Accounts":39.1283235 };
+				var timeline = { "Power Apps Runs":58.5358615 };
 			</script>
 		<script type='text/javascript'>
 	$('.brand-logo').text('').append('<img src=D:\Users\jloyzaga\Documents\FrameworkForJoe\FrameworkForJoe\Capgemini_logo_high_res-smaller-2.jpg>')
