--- a/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_10_01_2020/Reports/index.html
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/Reports/Log_10_01_2020/Reports/index.html
@@ -53,7 +53,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">9/29/2020 11:57:51 PM</span>
+                    <span class="badge badge-primary">10/1/2020 1:06:05 PM</span>
                 </a>
             </li>
         </ul>
@@ -108,7 +108,7 @@
 											<i class="fa fa-exclamation-circle"></i>
 										</a>
 										<ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-											<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																																																							<div class="dropdown-divider"></div>
+<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>																																																																		<div class="dropdown-divider"></div>
 											<a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 										</ul>
 									</li>
@@ -116,25 +116,25 @@
                             </div>
                             <div class="test-list-wrapper scrollable">
                                 <ul class="test-list-item">
-										<li class="test-item" status="fail" author="" device="" tag=""> 
-											<div class="status-avatar fail-bg">
-												<i class="fa fa-times text-white"></i>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">Creation, updation and deletion of Employer Accounts</p> 
-													<p class="duration text-sm">0h:0m:39s+128ms</p> 
-													<span class="datetime">23:57:52 PM</span>
+													<p class="name">Power Apps Runs</p> 
+													<p class="duration text-sm">0h:0m:25s+274ms</p> 
+													<span class="datetime">13:06:05 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-fail">Creation, updation and deletion of Employer Accounts</h5>
-															<span class='badge badge-success'>9/29/2020 11:57:52 PM</span>
-															<span class='badge badge-danger'>9/29/2020 11:58:31 PM</span>
-															<span class='badge badge-default'>0h:0m:39s+128ms</span>
+															<h5 class="test-status text-pass">Power Apps Runs</h5>
+															<span class='badge badge-success'>10/1/2020 1:06:05 PM</span>
+															<span class='badge badge-danger'>10/1/2020 1:06:31 PM</span>
+															<span class='badge badge-default'>0h:0m:25s+274ms</span>
 														</div>
 																											</div>
 												</div>
@@ -142,21 +142,20 @@
 															<div class="card">
 																<div class="card-header" role="tab">
 																	<h5 class="card-title pl-3">
-																		<div class="node">Create Employer CAD Account</div>
-																		<div class="status-avatar float-left fail-bg">
-																			<i class="fa fa-times text-white"></i>
+																		<div class="node">Run UMA Power Automate Flows</div>
+																		<div class="status-avatar float-left pass-bg">
+																			<i class="fa fa-check text-white"></i>
 																		</div>
 																	</h5>
 																</div>
 																	<div class="collapse">
 																		<div class="card-body">
 																				<div class="">
-																					<div class="node">Given: CSA user logs-in and navigates to 'Employer' Page</div>
-																					<div class="status-avatar float-left fail-bg">
-																						<i class="fa fa-times text-white"></i>
+																					<div class="node">Given: CSA User logs-in and navigates to UMA Power Automate Flows page</div>
+																					<div class="status-avatar float-left pass-bg">
+																						<i class="fa fa-check text-white"></i>
 																					</div>
-																																											<div class="node-description">A exception with a null response was thrown sending an HTTP request to the remote WebDriver server for URL http://localhost:61352/session/5fc75e5241a93284c46ccd59361badf0/elements. The status of the exception was KeepAliveFailure, and the message was: The underlying connection was closed: A connection that was expected to be kept alive was closed by the server.</div>
-																				</div>
+																																									</div>
 																		</div>
 																	</div>
 															</div>
